# tadf-workbench

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py  tadf-workbench.spec
.github/workflows/: build-windows.yml
docs/: ARCHITECTURE.md  BUILD_WINDOWS.md  CHEMISTRY.md  DEVELOPMENT.md  USER_GUIDE.md
docs/plans/: 2026-04-24-tadf-angle-scan.md
docs/superpowers/specs/: 2026-04-27-jablonski-and-orbital-extras-design.md
scripts/: generate_demo_scan.py
src/tadf_workbench/: __init__.py  main.py
src/tadf_workbench/analysis/: __init__.py  jablonski.py  tadf_metrics.py
src/tadf_workbench/core/: __init__.py  angle_scan.py  fragments.py  molecule.py  quantum_data.py  stage.py
src/tadf_workbench/parsers/: __init__.py  angle_scan_parser.py  gaussian_parser.py
src/tadf_workbench/ui/: __init__.py  angle_scan_plots.py  angle_scan_table.py  angle_scan_window.py  dihedral_3d_panel.py  donor_acceptor_dialog.py  jablonski_grid_window.py  jablonski_panel.py
src/tadf_workbench/utils/: __init__.py  atom_properties.py
tests/: __init__.py  test_angle_scan_core.py  test_angle_scan_parser.py  test_angle_scan_plots.py  test_angle_scan_table.py  test_angle_scan_window.py  test_core.py  test_dihedral_3d_panel.py  test_donor_acceptor_dialog.py  test_e2e_angle_scan.py  test_fragments.py  test_tadf_metrics.py
tests/fixtures/: __init__.py  build_fixtures.py
