[project]
name = "tadf-workbench"
version = "0.1.0"
description = "Interactive donor–acceptor dihedral-angle scan workbench for TADF molecule design"
authors = [{name = "Ujjwal Raj"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["chemistry", "TADF", "quantum chemistry", "Gaussian", "visualization", "dihedral"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "PyQt5>=5.15.0",
    "pyqtgraph>=0.12.0",
    "numpy>=1.20.0",
    "PyOpenGL>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
]

[project.scripts]
tadf-workbench = "tadf_workbench.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tadf_workbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
